[project]
name = "meshforge-maps"
version = "0.7.0-beta"
description = "Unified multi-source mesh network map for MeshForge"
requires-python = ">=3.9"
license = "GPL-3.0"
readme = "README.md"

[project.optional-dependencies]
mqtt = ["paho-mqtt>=1.6.0,<3.0"]
websocket = ["websockets>=12.0"]
meshtastic = ["meshtastic>=2.0", "protobuf>=4.0"]
tls = ["pyopenssl>=25.3.0", "cryptography>=45.0.7,<47"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

# ---------------------------------------------------------------------------
# Tool configuration (aligned with parent meshforge patterns)
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests that are slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/tui/*", "tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
]
ignore = [
    "E501",  # line length (handled by formatter)
    "S101",  # assert usage (needed in tests)
    "S603",  # subprocess without shell (we validate this manually)
    "S607",  # start process with partial path (rnstatus is expected)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106", "S108"]  # asserts, hardcoded passwords, temp paths OK in tests
